playbook/install-istio/cluster-gateway-svc-remote.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  externalIPs:
    - 192.53.173.177
  ports:
    - name: http2
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
