playbook/install-istio/cluster-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 55.55.55.5
      port:
        name: http
        number: 80
        protocol: HTTP
