playbook/install-istio/smoke-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smoke
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke
  namespace: smoke
spec:
  selector:
    matchLabels:
      run: smoke
  replicas: 2
  template:
    metadata:
      labels:
        run: smoke
    spec:
      containers:
        - name: smoke
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smoke
  namespace: smoke
  labels:
    run: smoke
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: smoke
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: smoke
  namespace: smoke
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - 0.0.0.0
  http:
    - match:
        - uri:
            prefix: /smoke
      rewrite:
        uri: /
      route:
        - destination:
            host: smoke
            port:
              number: 80
